# QR_project

./: README.md
mintchoco1/: CMakeLists.txt  package.xml
mintchoco1_controller/: CMakeLists.txt  package.xml
mintchoco1_controller/config/: mintchoco1_control.yaml
mintchoco1_controller/include/mintchoco1_controller/: mintchoco1_controller.hpp
mintchoco1_controller/launch/: mintchoco1_control.launch
mintchoco1_controller/src/: mintchoco1_controller.cpp
mintchoco1_description/: CMakeLists.txt  package.xml
mintchoco1_description/config/: joint_names_mintchoco.yaml
mintchoco1_description/launch/: display.launch  gazebo.launch
mintchoco1_description/meshes/: LB_link1.STL  LB_link2.STL  LB_link3.STL  LF_link1.STL  LF_link2.STL  LF_link3.STL  RB_link1.STL  RB_link2.STL  RB_link3.STL  RF_link1.STL  RF_link2.STL  RF_link3.STL  base_link.STL
mintchoco1_description/urdf/: mintchoco1.csv  mintchoco1.gazebo.xacro  mintchoco1.transmission.xacro  mintchoco1.urdf.xacro  mintchoco1.urdf2.xacro  mintchoco1_robot.urdf.xacro  properties.urdf.xacro
mintchoco1_gazebo/: CMakeLists.txt  package.xml
mintchoco1_gazebo/launch/: mintchoco1_world.launch
mintchoco1_libs/: CMakeLists.txt  package.xml
mintchoco1_libs/include/mintchoco1_libs/: gait_scheduler.hpp  kinematics.hpp  locomotion.hpp  mintchoco1.hpp  trajectory_generator.hpp
mintchoco1_libs/src/: gait_scheduler.cpp  kinematics.cpp  locomotion.cpp  mintchoco1.cpp  mintchoco1_node.cpp  trajectory_generator.cpp
mintchoco1_msgs/: CMakeLists.txt  package.xml
mintchoco1_msgs/msg/: Mintchoco1Control.msg
mintchoco1_teleop/: CMakeLists.txt  package.xml
mintchoco1_teleop/src/: mintchoco1_keyboard.cpp
