<?xml version="1.0"?>
<package format="2">
  <name>mintchoco1_gazebo</name>
  <version>0.0.0</version>
  <description>The mintchoco1_gazebo package</description>

  <maintainer email="seok2@todo.todo">seok2</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>ros_controllers</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
