<?xml version="1.0"?>
<package format="2">
  <name>mintchoco1_libs</name>
  <version>0.0.0</version>
  <description>The mintchoco1_libs package</description>
  <maintainer email="seok2@todo.todo">seok2</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
